test/nestInf.slq
// args: --run

def main(){
	x:=0:!ğ”¹;
	while true{
		y:=[x]; // error
		forget(x); // error
		x:=y;
	}
}
